--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,5 +1,5 @@
 ---
-import { string } from "astro/zod";
+
 
 interface Props {
   contenido: string;
@@ -11,7 +11,7 @@ interface Props {
 const { contenido, color, area } = Astro.props;
 ---
 
-<button onclick= style={`grid-area: ${area};`} class={color}>{contenido}</button>
+<button style={`grid-area: ${area};`} class={color}>{contenido}</button>
 
 <style>
   button {
